[tool.poetry]
name = "frameio-oauth"
version = "0.1.0"
description = ""
authors = ["JPDepew <johnpaul.depew@geckorobotics.com>"]
readme = "README.md"
packages = [{include = "oauth_test"}]

[tool.poetry.dependencies]
python = "3.9.1"
flask = "^2.2.3"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
