[tool.poetry]
name = "frameio-oauth"
version = "0.1.0"
description = ""
authors = ["JPDepew <jpdepewjp@gmail.co>"]
readme = "README.md"
packages = [{include = "frameio_oauth"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
